<resources>
    <string name="app_name">AppPETs Source Demo With P-Lib</string>
    <string name="app_title">This app requests private data in order to send it somewhere using the Privacy Library</string>
    <string name="get">GET</string>
    <string name="send">SEND</string>
    <string name="device_id">Device Id</string>
    <string name="android_id">Android Id</string>
    <string name="last_location">Last Location</string>
    <string name="plib_settings">PLib-Settings</string>
    <string name="clear">Clear</string>
    <string name="do_test">Do Test</string>
    <string name="imei">IMEI</string>
    <string name="phone_number">Phone Number</string>
    <string name="sim_serial">SIM Serial</string>
    <string name="subscriber_id">Subscriber Id</string>
    <string name="wifi_info">Wifi Info</string>
    <string name="wifi_mac_address">Wifi MAC Address</string>
    <string name="bluetooth_mac">Bluetooth MAC</string>
    <string name="contacts">Contacts</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select All</string>
    <string name="test_string">Test String</string>
    <string name="apk_sign">Apk Sign</string>
    <string name="hashed_apk_signature">Hashed Apk Signature</string>
</resources>
